# Warszat_Python29

./: README.md  as2.py  asy.py  automate.ini  class_metod.py  config.yaml  cron.py  domieszki.py  fun1.py  funk2.py  funk3.py  importowanie_pdf.py  klasa1.py  klasa2.py  klasa3.py  klasa4.py  klasa_danych.py  klasa_super.py  klasy_sposob1.py  klasy_sposob2.py  myapp.py  objg.py  opcj_klucze.py  poli1.py  posortowanie.py  prefer_func.py  prif.py  przyklad2.py  przyklad3.py  przyklad5.py  pyproject.toml  q2.py  q3.py  qt1.py  sekw1.py  sekw2.py  sekw3.py  struct_pdf.py  task1.py  task2.py  (+1 more)
czwartek/: atrybuty.py  class_metod.py  importowanie_pdf.py  klasa_super.py  make_pdf.py  task2.py
pythonproject1/: klasa3.py
wtorek_sroda/: fun1.py  opcj_klucze.py  posortowanie.py  przyklad1.py  przyklad4.py  zmienne_arg.py
